Fix descender clipping in logo suffix (g, y, etc.)
Increase wrapper height to 1.35em to accommodate descenders

--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ ul {
 .logo-suffix-wrap {
   display: inline-block;
   overflow: hidden;
-  height: 1em;
+  height: 1.35em;
   line-height: 1;
   margin-left: 0.15em;
 }
